# rust-aoc

./: Cargo.toml  README.md  README.org
aoc-2015/: Cargo.toml
aoc-2015/src/: main.rs
aoc-2016/: Cargo.toml
aoc-2016/src/: main.rs
aoc-2021/: Cargo.toml
aoc-2021/src/: main.rs
