[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
regex = "1.5.4"
lazy_static = "1.4.0"
serde_json = "1.0.71"
itertools = "0.10.1"
log = "0.4.14"
env_logger = "0.9.0"
